# syncweb

./: .air.toml  .clippy.toml  .gitattributes  .gitignore  .golangci.yml  CONVERSION_PLAN.md  Cargo.toml  DROP_FORMAT.md  FAQ.md  INDEXING.md  LICENSE  Makefile  PROPOSAL1.md  PROPOSAL10.md  PROPOSAL2.md  PROPOSAL3.md  PROPOSAL4.md  PROPOSAL5.md  PROPOSAL6.md  PROPOSAL7.md  PROPOSAL8.md  PROPOSAL9.md  README.md  TDD_IMPLEMENTATION_PLAN.md  TDD_IMPLEMENTATION_PLAN_DAEMON.md  TDD_IMPLEMENTATION_PLAN_DAEMON2.md  TDD_IMPLEMENTATION_PLAN_PHASE8.md  TDD_IMPLEMENTATION_PLAN_PHASE9.md  TODO  config-laptop.toml  config-phone.toml  config-server.toml  go.mod  go.sum  plan.md  syncweb.test.js
.github/workflows/: benchmark.yml  ci.yml
cmd/syncweb/: cli_syncweb.go  main.go  main_test.go
completions/: syncweb.bash  syncweb.elvish  syncweb.fish  syncweb.ps1  syncweb.zsh
docs/: DECISION_TABLE.md  README.md  api-reference.md  architecture.md  archive_format.md  commands.md  data-models.md  drop_format.md  filter-logging-schedule.md  indexing.md  module-structure.md  offline-conflict.md  overview.md  packages.md  phases.md  relay.md  states.md  testing.md
e2e/: .gitignore  README.md  fixtures-cli.ts  fixtures.ts  global-setup.ts  index.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/pages/: base-page.ts  completion-page.ts  files-page.ts  sidebar-page.ts
e2e/tests/: cli-accept-drop.spec.ts  cli-basic.spec.ts  cli-devices.spec.ts  cli-download.spec.ts  cli-errors.spec.ts  cli-find.spec.ts  cli-folders.spec.ts  cli-ls.spec.ts  completion-view.spec.ts  file-operations.spec.ts  modal-interactions.spec.ts  navigation-pom.spec.ts  offline-mode.spec.ts  sidebar-pom.spec.ts
e2e/utils/: cli-runner.ts  test-server.ts
examples/: install.sh  syncweb-automatic.service  syncweb-blocklist.sh  syncweb-wishlist.sh
internal/commands/: cmd_accept.go  cmd_create.go  cmd_devices.go  cmd_download.go  cmd_download_test.go  (+21 more)
man/: syncweb-accept.1  syncweb-attest.1  syncweb-automatic.1  syncweb-backup.1  syncweb-collection.1  syncweb-config.1  syncweb-create.1  syncweb-daemon-add.1  syncweb-daemon-reload.1  syncweb-daemon-remove.1  syncweb-daemon-shutdown.1  syncweb-daemon-sync.1  syncweb-daemon.1  syncweb-devices.1  syncweb-download.1  syncweb-drop.1  syncweb-find.1  syncweb-folders.1  syncweb-health.1  syncweb-import.1  syncweb-indexing.1  syncweb-init.1  syncweb-join.1  syncweb-leave.1  syncweb-link.1  syncweb-ls.1  syncweb-mirror.1  syncweb-moderation.1  syncweb-network.1  syncweb-package.1  syncweb-provider.1  syncweb-publish.1  syncweb-reload.1  syncweb-repl.1  syncweb-report.1  syncweb-restore.1  syncweb-schedule.1  syncweb-shutdown.1  syncweb-snapshot.1  syncweb-snapshots.1  (+14 more)
plans/: attest-tdd.md  ephemeral-to-persistent.md  health-tdd.md  iroh-docs-audit.md  json-to-sqlite.md  link-tdd.md  mapa-p2p-api.md  media-playback.md  mirror-tdd.md  network-remaining-gaps.md  report-tdd.md  sort-tdd.md  stats-tdd.md  trust-vouch-tdd.md  unified-selectors.md
syncweb-cli/: Cargo.toml  README.md
syncweb-cli/src/: cli.rs  main.rs
syncweb-cli/src/cli/: args.rs  commands.rs  indexing.rs  output.rs
syncweb-cli/tests/: cli_test.rs  daemon_integration_test.rs  full_suite_test.rs  indexing_test.rs  interop_test.rs
syncweb-core/: Cargo.toml  README.md
syncweb-core/benches/: core_benchmarks.rs
syncweb-core/src/: daemon.rs  error.rs  filter.rs  folder.rs  fs.rs  indexing.rs  init.rs  lib.rs  net.rs  node.rs  parsing.rs  schedule.rs  search.rs  snapshot.rs  sort.rs  stat.rs  stats.rs  storage.rs  sync.rs  verify.rs
syncweb-core/src/daemon/: daemon.rs  ipc.rs  pool.rs  route.rs  state.rs  supervisor.rs
syncweb-core/src/folder/: archive_export.rs  archive_import.rs  archive_verify.rs  catalog.rs  collection.rs  drop_export.rs  drop_import.rs  drop_verify.rs  manager.rs  mod.rs  package.rs  sync_mode.rs  syncweb_folder.rs
syncweb-core/src/fs/: exporter.rs  importer.rs  scanner.rs  watcher.rs
syncweb-core/src/indexing/: catalog.rs  denylist.rs  links.rs  parallel.rs  reputation.rs  resilience.rs  wot.rs
syncweb-core/src/net/: bep_identity.rs  mod.rs  network.rs  network_manager.rs  relay.rs
syncweb-core/src/node/: blob_store.rs  discovery.rs  docs_engine.rs  gossip_service.rs  identity.rs  iroh_node.rs  mod.rs
syncweb-core/src/storage/: config.rs  mod.rs
syncweb-core/src/sync/: actor.rs  deleted.rs  engine.rs  intents.rs  lazy_fetch.rs  partial_fetch.rs  peer_tracker.rs  session.rs  sessions.rs  subscribe.rs
syncweb-core/tests/: actor_test.rs  archive_export_test.rs  archive_import_test.rs  archive_verify_test.rs  blob_store_test.rs  collection_publish_test.rs  collection_test.rs  config_test.rs  daemon_archive_test.rs  daemon_integration_test.rs  docs_engine_test.rs  drop_export_test.rs  drop_import_test.rs  drop_verify_test.rs  exporter_test.rs  filter_test.rs  find_test.rs  folder_test.rs  gossip_service_test.rs  identity_test.rs  importer_test.rs  indexing_test.rs  integration_tests.rs  iroh_node_test.rs  lazy_fetch_test.rs  mirror_test.rs  network_test.rs  package_test.rs  partial_fetch_test.rs  phase1_services_test.rs  relay_test.rs  reputation_test.rs  scanner_test.rs  schedule_stats_test.rs  search_test.rs  session_test.rs  smart_ban_test.rs  snapshot_test.rs  sort_test.rs  stat_test.rs  (+4 more)
syncweb-core/tests/integration/: archive_export_test.rs  archive_import_test.rs  archive_verify_test.rs  blob_store_test.rs  collection_publish_test.rs  collection_test.rs  daemon_archive_test.rs  daemon_integration_test.rs  docs_engine_test.rs  exporter_test.rs  find_test.rs  folder_test.rs  gossip_service_test.rs  identity_test.rs  importer_test.rs  indexing_test.rs  iroh_node_test.rs  lazy_fetch_test.rs  mirror_test.rs  mod.rs  package_test.rs  partial_fetch_test.rs  relay_test.rs  search_test.rs  smart_ban_test.rs  snapshot_test.rs  sort_test.rs  stat_test.rs  sync_test.rs  topic_tracker_test.rs
syncweb-core/tests/test_utils/: mod.rs
web/: app.js  app.test.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.js  web.go
(+48 files in other folders)
