[workspace]
resolver = "2"
members = [
    "syncweb-core",
    "syncweb-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/chapmanjacobd/syncweb"
description = "delay-tolerant web surfing"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.7"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-test = "0.2"
rayon = "1"
blake3 = "1"
fs2 = "0.4"
rand = "0.10"
hex = "0.4"
base32 = "0.5"
sha2 = "0.11"
hmac = "0.13"
hkdf = "0.13"
uuid = { version = "1", features = ["v4"] }
opaque-debug = "0.4"

# Iroh stack
iroh = "1.0.2"
iroh-blobs = "0.103.0"
iroh-docs = "0.101.0"
iroh-gossip = "0.101.0"
distributed-topic-tracker = "0.3.5"
ed25519-dalek = "3.0.0-rc.0"
n0-future = "0.3.1"
