[package]
name = "syncweb"
description = "CLI tool for syncweb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
syncweb-core = { path = "../syncweb-core" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
rayon.workspace = true
toml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap_complete = "4.6"
clap_mangen = "0.3"
blake3.workspace = true
iroh-docs.workspace = true
iroh-blobs.workspace = true
iroh.workspace = true
uuid.workspace = true

[lints]
workspace = true
