[package]
name = "syncweb"
description = "CLI tool for syncweb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
syncweb-core = { path = "../syncweb-core", version = "0.1.1-alpha.1" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
rayon.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap_complete = "4.6"
clap_mangen = "0.3"
blake3.workspace = true
iroh-docs.workspace = true
iroh-blobs.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
n0-future.workspace = true
uuid.workspace = true
async-recursion.workspace = true
notify.workspace = true
comfy-table = "7.2"
dialoguer = "0.11"
ed25519-dalek.workspace = true
hex.workspace = true
indicatif = "0.17"
bao-tree = "0.16"
iroh-io = "0.6"

[lints]
workspace = true
